--- a/packages/firebase_auth/firebase_auth_desktop/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth_desktop/pubspec.yaml
@@ -5,15 +5,15 @@ repository: https://github.com/invertase/flutterfire_desktop
 version: 1.0.2
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: '>=1.20.0'
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   desktop_webview_auth: ^0.0.8
   firebase_auth: ^3.6.2
   firebase_auth_dart: ^1.0.1
   firebase_auth_platform_interface: ^6.5.2
-  firebase_core: ^1.20.0
+  firebase_core: ^2.13.1
   firebase_core_dart: ^1.0.1
   flutter:
     sdk: flutter
